# FLAIR-NISI

./: flair-classification.ipynb  pyproject.toml
configs/: flair-1-config-detect.yaml
src/flair/: main.py
src/zone_detect/: main.py
