[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "flair"
version="0.2.0"
authors = [
    {name = "Anatal Garioud", email = "ai-challenge@ign.fr"},
    {name = "Samy Khelifi"}
]
description = "baseline and demo code from the flair #1 challenge"
readme = "README.md"
url='https://github.com/IGNF/FLAIR-1'
requires-python = ">=3.10"
keywords = [
    "gis", "geospatial", "geographic", "raster", "vector", 
    "remote sensing", "machine learning", "deep learning"
]

license = {text = "Apache-2.0"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Recognition'
]
dependencies = [
    "geopandas>=0.10",
    "rasterio>=1.1.5",
    "omegaconf",
    "jsonargparse",
    "matplotlib>=3.8.2",
    "pandas>=2.1.4",
    "scikit-image>=0.22.0",
    "pillow>=9.3.0",
    "torchmetrics==1.2.0",
    "pytorch-lightning==2.1.1",
    "segmentation-models-pytorch==0.3.3",
    "albumentations==1.3.1",
    "tensorboard==2.15.1",
    "transformers>=4.41.2"
]
[project.scripts]
flair-detect="src.zone_detect.main:main"
flair="src.flair.main:main"
